[tool.poetry]
name = "donuts-python"
version = "0.0.3a0"
description = "Python binding to Donuts"
license = "MIT"
authors = ["Takahiro Ueda <tueda@st.seikei.ac.jp>"]
readme = "README.rst"
repository = "https://github.com/tueda/donuts-python"
keywords = ["computer algebra", "multivariate polynomial arithmetic"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [{ include = "donuts" }]

[tool.poetry.dependencies]
python = "^3.7"

pyjnius = "^1.3"

[tool.poetry.dev-dependencies]
py4j = "^0.10.9.7" # alternative to pyjnius
jpype1 = "^1.4.0"

invoke = "^1.7.1"
pre-commit = "^2.20.0"
pytest = "^7.1.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^3.0.0"
sphinx = "^5.1.1"
sphinx_rtd_theme = "^1.0.0"
sphinx-autodoc-typehints = "^1.19.2"
wheel = "^0.37.1"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.isort]
profile = "black"
skip_glob = [".*", "donuts/java"]
