[tool.poetry]
name = "donuts-python"
version = "0.0.3"
description = "Python binding to Donuts"
license = "MIT"
authors = ["Takahiro Ueda <t.ueda.od@juntendo.ac.jp>"]
readme = "README.rst"
repository = "https://github.com/tueda/donuts-python"
keywords = ["computer algebra", "multivariate polynomial arithmetic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
]
packages = [{ include = "donuts" }]

[tool.poetry.dependencies]
python = "^3.7"

pyjnius = "^1.3"

[tool.poetry.dev-dependencies]
py4j = "^0.10.9.7"  # alternative to pyjnius
jpype1 = "^1.5.0"  # alternative to pyjnius

invoke = "^2.2.0"
pre-commit = "^2.21.0"  # frozen for Python 3.7
pytest = "^7.4.3"
pytest-benchmark = "^4.0.0"
pytest-cov = "^4.1.0"
sphinx = "^5.3.0"  # frozen for Python 3.7
sphinx_rtd_theme = "^2.0.0"
sphinx-autodoc-typehints = "^1.23.0"  # frozen for Python 3.7
wheel = "^0.42.0"

[tool.coverage.report]
exclude_lines = [
    "@overload",
    "if TYPE_CHECKING:",
    "pragma: no cover",
    "raise AssertionError()",
    "return NotImplemented",
]

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203", # for black
]
per-file-ignores = [
    "build.py:S404,S603,S607",
    "docs/conf.py:S404",
    "tasks.py:D403",
    "tests/*.py:D100,D103,S101,S301,S307,S311,S403",
]

[tool.isort]
profile = "black"
skip_glob = [".*", "donuts/java"]

[tool.mypy]
pretty = true
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = [
    "jnius_config",
    "jnius",
    "jpype",
    "py4j.*",
    "sphinx_rtd_theme",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = [
    "--benchmark-warmup=on",
    "--cov-report=html",
    "--cov-report=term",
    "--doctest-glob='*.rst'",
    "--doctest-modules",
    "--durations=10",
    "-p no:faulthandler",
]
testpaths = [
    "tests",
    "README.rst",
]
